--- a/server/bin/src/main/resources/application.properties
+++ b/server/bin/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://db:5432/safecontractchangesdemo
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
