--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,9 @@
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
 			"version": "latest",
 			"dockerDashComposeVersion": "v2"
+		},
+		"ghcr.io/devcontainers/features/aws-cli:1": {
+			"version": "latest"
 		}
 	},
 
@@ -38,6 +41,9 @@
 				"DotJoshJohnson.xml"
 			]
 		}
+	},
+	"containerEnv": {
+		"AWS_PROFILE": "sandbox-chris"
 	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
