--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -18,6 +18,7 @@ services:
 
     volumes:
       - ../..:/workspaces:cached
+      - ~/.aws:/home/vscode/.aws
       
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
