FULL-STACK-CHANGE: This change will fail on deploy as contracts are not changed safely.  Run npm `run test:aws:loop` before running deployment to see when it fails.

--- a/server/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/01_initial_schema.yml
+  - include:
+      file: db/changelog/02_add_full_name.yml
