DB - Step 2 - CHANGE - Migrate data and ensure client only uses new fields for reading and writing.

--- a/server/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,7 @@ databaseChangeLog:
       file: db/changelog/01_initial_schema.yml
   - include:
       file: db/changelog/02_add_fullname.yml
+  - include:
+      file: db/changelog/03_migrate_data.sql
+  - include:
+      file: db/changelog/04_old_field_nullable.yml
